samples/_failures_safe/1761695411_77f19e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ba2e25b.c: In function ‘transform_bounding_box’:
./samples/SAFE/__tmp_6ba2e25b.c:122:9: error: expected expression at end of input
  122 |         if (transformed.y >
      |         ^~
./samples/SAFE/__tmp_6ba2e25b.c:122:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ba2e25b.c:122:9: error: expected declaration or statement at end of input
